# No-Code-ML-Models-generator

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/models/: association-model.py  classification_model.py  regression_model.py
backend/models/tests/: regression_test.py
backend/tools/: feature_selection.py  regression_agent.py  testCode.py  test_plot.ipynb
client/: package-lock.json  package.json
client/src/: index.css  main.tsx
client/src/pages/: CreateAccountPage.tsx  ErrorPage.tsx  HomePage.module.css  HomePage.tsx  LoginPage.tsx  Page.module.css  ProductPage.module.css  ProductPage.tsx
