[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.138.1",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "pandas>=3.0.4",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
]
